--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -9,3 +9,664 @@ body {
     font-size: 1.6rem;
     font-family: "Sora", sans-serif;
 }
+/* ==================  COMMON  ================ */
+a {
+    text-decoration: none;
+}
+input,
+textarea,
+select,
+button {
+    font-family: inherit;
+    font-size: inherit;
+}
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+.btn {
+    display: inline-block;
+    min-width: 205px;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 99px;
+    border: 1px solid transparent;
+    font-size: 1.6rem;
+    font-weight: 400;
+    text-align: center;
+    line-height: 60px;
+    color: #ffffff;
+    background: #2e80ce;
+}
+.btn:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+.section__heading {
+    font-weight: 600;
+    font-size: 5rem;
+    line-height: 1.2;
+    letter-spacing: -0.02em;
+    color: #10375c;
+}
+.section__desc {
+    margin-top: 18px;
+    font-weight: 300;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #575f66;
+}
+.control {
+    display: flex;
+    column-gap: 18px;
+}
+.control__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #575f66;
+    color: #575f66;
+    outline: none;
+    background: #fff;
+    transition: 0.25s;
+}
+.control__btn:hover {
+    color: #fff;
+    border-color: #2e80ce;
+    background: #2e80ce;
+    cursor: pointer;
+}
+.control-next-icon {
+    rotate: 180deg;
+}
+/* ==================  HEADER  ================ */
+.header {
+    min-height: 100vh;
+    background: #10375c;
+    padding-top: 30px;
+}
+
+.logo {
+    display: inline-flex;
+    font-size: 1rem;
+}
+.logo__title {
+    margin-left: 0.6em;
+    text-align: right;
+    line-height: 1.6em;
+}
+.logo__brand {
+    display: block;
+    font-family: "Sora", sans-serif;
+    font-weight: 400;
+    font-size: 1.8em;
+    color: #ffffff;
+}
+.logo__brand--small {
+    font-weight: 300;
+    font-size: 1.2em;
+}
+.navbar__list {
+    display: flex;
+}
+.header-action__login,
+.navbar__link {
+    padding: 4px 21px;
+    font-weight: 300;
+    font-size: 1.6rem;
+    color: #c9d2da;
+}
+.navbar__link:hover,
+.navbar__list--active {
+    color: #ffffff;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.navbar__list--active::before {
+    position: relative;
+    left: -8px;
+    top: -2px;
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #ffffff;
+}
+.header-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header-action {
+    display: flex;
+    align-items: center;
+}
+.header-action__login {
+    margin-right: 7px;
+}
+.header-action__signup {
+    height: 44px;
+    line-height: 44px;
+    min-width: 104px;
+}
+/* ==================  HERO  ================ */
+.hero {
+    display: inline-flex;
+    margin-top: 76px;
+    margin-bottom: 110px;
+    align-items: center;
+}
+.hero__content {
+    /* khong bi co nho */
+    flex-shrink: 0;
+    width: 44%;
+}
+.hero__media {
+    /* chiem phan con lai 100%-44% */
+    flex-grow: 1;
+}
+.hero__heading {
+    font-weight: 600;
+    font-size: 7rem;
+    line-height: 1.14;
+    letter-spacing: -0.02em;
+    color: #ffffff;
+}
+.hero__desc {
+    margin-top: 22px;
+    font-weight: 300;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #c9d2da;
+}
+.hero__row {
+    display: flex;
+    align-items: center;
+    margin-top: 38px;
+}
+.hero__phone {
+    margin-left: 38px;
+    font-size: 1.8rem;
+    line-height: 1.67;
+    color: #ffffff;
+}
+.hero__images {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.hero__img {
+    width: 330px;
+    height: 540px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+.hero__img:first-child {
+    position: relative;
+    margin-right: -6px;
+}
+.hero__img:last-child {
+    width: 210px;
+    height: 410px;
+}
+/* ==================  SERVICES  ================ */
+.service {
+    padding: 170px 0;
+}
+.service__list {
+    margin-bottom: 55px;
+}
+.service__heading,
+.service__desc {
+    text-align: center;
+}
+.service__desc {
+    max-width: 468px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.service__row {
+    display: flex;
+    margin-top: 70px;
+    align-items: center;
+    justify-content: space-between;
+}
+.service__img {
+    width: 570px;
+    height: 570px;
+    border-radius: 12px;
+}
+/* service item */
+.service-item {
+    display: flex;
+    width: 470px;
+    padding: 22px;
+    background: #ffffff;
+    border-radius: 10px;
+}
+.service-item:hover {
+    position: relative;
+    box-shadow: 0px 14px 28px rgba(0, 0, 0, 0.05);
+}
+.service-item:hover .service-item__icon {
+    color: #ffffff;
+    background: #2e80ce;
+}
+.service-item__icon {
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #eff6fd;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.05);
+    transition: 0.25s;
+}
+.service-item__body {
+    margin-left: 19px;
+}
+.service-item__heading {
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.28;
+    color: #10375c;
+}
+.service-item__desc {
+    margin-top: 8px;
+    font-weight: 300;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #575f66;
+}
+.work {
+    padding: 100px 0;
+    background: #f7fbff;
+}
+.work__desc {
+    width: 468px;
+}
+.work__list {
+    display: grid;
+    /* moi gia tri tuong ung 1 cot ~ df, flex-grow=1 */
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
+    margin-top: 70px;
+}
+.work__item {
+    padding: 44px;
+    border: 16px solid #eaf6ff;
+    border-radius: 4px;
+    transition: 0.25s;
+}
+.work__item:hover {
+    transform: translatey(-16px);
+    border-color: #2e80ce;
+}
+.work-item__heading {
+    font-weight: 600;
+    font-size: 2.6rem;
+    line-height: 1.38;
+    color: #10375c;
+}
+.work-item__desc {
+    margin-top: 28px;
+    font-weight: 300;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #575f66;
+}
+.work-item__more {
+    display: inline-block;
+    margin-top: 18px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #2e80ce;
+}
+/* ==================  FEATURES  ================ */
+.feature {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+.feature__media {
+    width: 48%;
+}
+.feature__images {
+    position: relative;
+    padding: 0 58px 121px 0;
+}
+.feature__img {
+    width: 512px;
+    height: 370px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+.feature__img:last-child {
+    position: absolute;
+    width: 332px;
+    height: 370px;
+    right: 0;
+    bottom: 0;
+}
+.feature__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.feature__content {
+    width: 40%;
+}
+.feature__cta {
+    margin-top: 38px;
+}
+/* ==================  MEMBER  ================ */
+.member {
+    padding: 85px 0;
+    text-align: center;
+}
+.member__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.member__cta {
+    margin-top: 38px;
+}
+.member__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 30px;
+    margin-top: 70px;
+}
+.member__control {
+    margin-top: 38px;
+    justify-content: center;
+}
+.member-item:hover,
+.member-item__thumb:hover {
+    transform: scale(1.1);
+}
+.member-item__img-bg {
+    padding-top: 28px;
+    background: #eaf6ff;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.member-item__thumb {
+    display: block;
+    max-width: 100%;
+    height: 290px;
+    object-fit: cover;
+    transition: 0.25s;
+}
+.member-item__name {
+    margin-top: 12px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #10375c;
+}
+.member-item__desc {
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    color: #575f66;
+}
+/* ==================  INSTALL  ================ */
+.install {
+    margin-top: 180px;
+}
+.install__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #2e80ce;
+    border-radius: 4px;
+    padding: 0 70px;
+}
+.install__img {
+    display: block;
+    width: 284px;
+    height: 522px;
+    margin-top: -95px;
+    object-fit: cover;
+}
+.install__content {
+    max-width: 586px;
+}
+.install__heading,
+.install__desc {
+    color: #fff;
+}
+.install__heading {
+    max-width: 489px;
+}
+.install__row {
+    display: flex;
+    column-gap: 28px;
+    margin-top: 38px;
+}
+/* ==================  NEWS  ================ */
+.news {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+.news__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.news__content {
+    flex-shrink: 0;
+}
+.news__heading {
+    max-width: 470px;
+}
+.new__more {
+    display: inline-block;
+    margin-top: 28px;
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.56;
+    text-underline-offset: 5px;
+    text-decoration-line: underline;
+    color: #10375c;
+}
+.news__control {
+    margin-top: 28px;
+}
+.news__list {
+    display: flex;
+    column-gap: 30px;
+    max-width: 570px;
+}
+.news__item {
+    flex: 1;
+    border-radius: 12px;
+    overflow: hidden;
+    transition: 0.25s;
+}
+.news__item:hover {
+    box-shadow: 0px 18px 50px rgba(0, 0, 0, 0.05);
+    transform: translateY(-8px);
+}
+.news__item:hover .news-item__body {
+    border-color: #fff;
+}
+.news-img__thumb {
+    display: block;
+    width: 100%;
+    height: 172px;
+    object-fit: cover;
+}
+.news-item__body {
+    padding: 24px;
+    border: 1px solid #e8ebee;
+    border-top: none;
+    border-radius: 0 0 12px 12px;
+    background: #ffffff;
+    transition: 0.25s;
+}
+.news-item__heading {
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1.62;
+    color: #10375c;
+}
+.news-item__desc {
+    margin-top: 10px;
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #575f66;
+}
+.news-item__more {
+    display: inline-block;
+    margin-top: 12px;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.3;
+    color: #10375c;
+}
+.news-item__more {
+    color: #2e80ce;
+}
+/* ==================  APPOINTMENT  ================ */
+.appointment {
+    margin: 85px 0 170px;
+}
+.appointment__inner {
+    background: #f7fbff;
+    padding: 100px 70px;
+    text-align: center;
+    border-radius: 4px;
+}
+.appointment__heading {
+    position: relative;
+    padding-bottom: 20px;
+}
+.appointment__heading::after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 136px;
+    height: 2px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    background: #2e80ce;
+}
+.appointment__desc {
+    font-size: 1.6rem;
+    max-width: 617px;
+    margin: 18px auto 38px;
+}
+/* ==================  FOOTER  ================ */
+.footer {
+    padding-top: 100px;
+    font-family: "Open Sans", sans-serif;
+    background: #10375c;
+}
+.footer__row {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+    column-gap: 78px;
+}
+.footer__desc {
+    margin-top: 22px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #a9b3bb;
+}
+.footer__heading {
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    color: #ffffff;
+}
+.footer__list {
+    margin-bottom: 28px;
+}
+.footer__link {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    color: #a9b3bb;
+    white-space: nowrap;
+}
+.footer__link:hover {
+    text-decoration: underline;
+}
+.footer__item {
+    margin-bottom: 10px;
+}
+.footer__social {
+    display: flex;
+    column-gap: 10px;
+    margin-bottom: 28px;
+}
+.footer__social-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    color: #2e80ce;
+    background: #fff;
+    transition: 0.25s;
+}
+.footer__social-btn:hover {
+    color: #fff;
+    background: #2e80ce;
+}
+.footer-form {
+    display: flex;
+    column-gap: 12px;
+    margin-top: 10px;
+}
+.footer-form__input {
+    width: 212px;
+    height: 46px;
+    padding: 0 10px;
+    outline: none;
+    border: 1px solid #406181;
+    color: #fff;
+    border-radius: 4px;
+    background: transparent;
+}
+.footer-form__input::placeholder {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    color: #9ca8b1;
+}
+.footer-form__submit {
+    font-weight: 600;
+    font-size: 1.4rem;
+    min-width: 108px;
+    height: 46px;
+    line-height: 46px;
+    border-radius: 4px;
+}
+.footer__copyright {
+    padding: 28px 0 42px;
+    border-top: 1px solid #406181;
+}
+.footer__copyright-text {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.86;
+    text-align: center;
+    color: #aab3ba;
+}
